@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Add steer parameter to CSceneNodeAnimatorFollowSpline which allows rotating node toward direction of movement. 
+  Thanks @ Bate for the patch (patch #175)
 - Add a workaround for XWarpPointer bug that causes mouse to jump when users have set a Coordinate Transformation Matrix for their mouse on X11.
   This was mentioned in bug #450 by vikaig.
   The fix needs compiling with _IRR_LINUX_X11_XINPUT2_ enabled (so far disabled by default)
